crates/emdb/tests/invalid/simple_bad_type.stderr
error: [EMQL-15] Table `countries` not found in query `no_table`

         = help: Either use a `ref <other table>` or create `table countries {...} @ [...]

  --> tests/invalid/simple_bad_type.rs:12:34
   |
12 |     query cool_bob(no_table: ref countries) {
   |                                  ^^^^^^^^^
